Fixed bug in CurrencyVC. Removed space.

--- a/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
+++ b/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
         <!--Main Currency Controller-->
         <scene sceneID="Adp-1Z-caj">
             <objects>
-                <viewController id="ozd-qv-KQk" customClass="MainCurrencyController" customModule="BitCoinTool" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="ozd-qv-KQk" customClass="MainCurrencyController" customModule="BitCoinTool" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="swb-mF-N5q">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -41,7 +41,6 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yJd-zO-6YC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <viewLayoutGuide key="safeArea" id="29f-pZ-EXg"/>
                                 <connections>
                                     <segue destination="Obs-RZ-e9j" kind="embed" identifier="SegueCurrencyView" id="Gdq-Sb-1fD"/>
                                 </connections>
@@ -49,10 +48,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="yJd-zO-6YC" firstAttribute="trailing" secondItem="Ip2-dC-iYs" secondAttribute="trailing" id="8fc-Dy-fUq"/>
-                            <constraint firstItem="yJd-zO-6YC" firstAttribute="leading" secondItem="Ip2-dC-iYs" secondAttribute="leading" id="QnC-Rc-F8q"/>
-                            <constraint firstItem="yJd-zO-6YC" firstAttribute="top" secondItem="Ip2-dC-iYs" secondAttribute="top" id="QpF-Xo-cqj"/>
-                            <constraint firstItem="yJd-zO-6YC" firstAttribute="bottom" secondItem="Ip2-dC-iYs" secondAttribute="bottom" id="g5a-Xm-wsk"/>
+                            <constraint firstItem="yJd-zO-6YC" firstAttribute="top" secondItem="Ip2-dC-iYs" secondAttribute="top" id="Om2-ro-v0M"/>
+                            <constraint firstItem="yJd-zO-6YC" firstAttribute="bottom" secondItem="Ip2-dC-iYs" secondAttribute="bottom" id="S2A-VZ-LBd"/>
+                            <constraint firstItem="yJd-zO-6YC" firstAttribute="trailing" secondItem="Ip2-dC-iYs" secondAttribute="trailing" id="SS4-Xp-agR"/>
+                            <constraint firstItem="yJd-zO-6YC" firstAttribute="leading" secondItem="Ip2-dC-iYs" secondAttribute="leading" id="lks-wx-qbB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ip2-dC-iYs"/>
                     </view>
@@ -83,16 +82,18 @@
         <!--Currency Controller-->
         <scene sceneID="rbf-LQ-53R">
             <objects>
-                <viewController id="Obs-RZ-e9j" customClass="CurrencyController" customModule="BitCoinTool" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Obs-RZ-e9j" customClass="CurrencyController" customModule="BitCoinTool" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BaD-Vc-OZK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qht-lt-qVl">
                                 <rect key="frame" x="177" y="267" width="20" height="20"/>
+                                <viewLayoutGuide key="safeArea" id="N7R-Dc-vC7"/>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZxN-JR-L4F" userLabel="messageLabel">
                                 <rect key="frame" x="16" y="266.5" width="343" height="21"/>
+                                <viewLayoutGuide key="safeArea" id="Bya-1k-Mg3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -100,7 +101,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wIa-6P-nlf" userLabel="Currency Container View">
                                 <rect key="frame" x="0.0" y="20" width="375" height="534"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rmw-KP-oEc">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rmw-KP-oEc">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="534"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <viewLayoutGuide key="safeArea" id="Ag7-K8-tZy"/>
@@ -235,7 +236,6 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="onL-bt-dMi"/>
                         <color key="barTintColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
