--- a/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
+++ b/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13770" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vPN-l2-tpn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vPN-l2-tpn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13770"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -115,28 +115,28 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USD ($)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbz-wy-Dc1">
-                                                            <rect key="frame" x="8" y="22" width="100" height="35"/>
+                                                            <rect key="frame" x="57" y="22" width="90" height="35"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="QMq-s7-z1m"/>
+                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="QMq-s7-z1m"/>
                                                                 <constraint firstAttribute="height" constant="35" id="wKa-S9-sfe"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="15"/>
                                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gpD-41-I9w">
-                                                            <rect key="frame" x="247" y="15" width="120" height="48.5"/>
+                                                            <rect key="frame" x="257" y="15" width="110" height="48.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SELL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LbI-Ve-GQG">
-                                                                    <rect key="frame" x="44.5" y="0.0" width="31" height="19.5"/>
+                                                                    <rect key="frame" x="39.5" y="0.0" width="31" height="19.5"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
                                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="10,053.23" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuO-nE-ziW">
-                                                                    <rect key="frame" x="0.0" y="27.5" width="120" height="21"/>
+                                                                    <rect key="frame" x="0.0" y="27.5" width="110" height="21"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" constant="120" id="Az2-ZE-rOX"/>
+                                                                        <constraint firstAttribute="width" constant="110" id="Az2-ZE-rOX"/>
                                                                         <constraint firstAttribute="height" constant="21" id="hBk-jQ-Ygn"/>
                                                                     </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -146,18 +146,18 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="V8W-Cd-QM5">
-                                                            <rect key="frame" x="123" y="15" width="120" height="48.5"/>
+                                                            <rect key="frame" x="143" y="15" width="110" height="48.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BUY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Vp-1X-c15">
-                                                                    <rect key="frame" x="46" y="0.0" width="28" height="19.5"/>
+                                                                    <rect key="frame" x="41" y="0.0" width="28" height="19.5"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="14"/>
                                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10,056.43" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXd-2a-ccf">
-                                                                    <rect key="frame" x="0.0" y="27.5" width="120" height="21"/>
+                                                                    <rect key="frame" x="0.0" y="27.5" width="110" height="21"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" constant="120" id="6jZ-xq-cUk"/>
+                                                                        <constraint firstAttribute="width" constant="110" id="6jZ-xq-cUk"/>
                                                                         <constraint firstAttribute="height" constant="21" id="rKd-VX-Kvl"/>
                                                                     </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -166,14 +166,25 @@
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1im-tt-nIP">
+                                                            <rect key="frame" x="20" y="29" width="25" height="20"/>
+                                                            <color key="backgroundColor" red="0.049696180559999997" green="0.67784288189999997" blue="0.35997178819999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="20" id="GFP-4q-kfq"/>
+                                                                <constraint firstAttribute="width" constant="25" id="f8B-bw-EYd"/>
+                                                            </constraints>
+                                                        </imageView>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="gpD-41-I9w" firstAttribute="centerY" secondItem="cUn-Kj-KYo" secondAttribute="centerY" id="71O-Pb-lCh"/>
+                                                        <constraint firstItem="jbz-wy-Dc1" firstAttribute="centerY" secondItem="1im-tt-nIP" secondAttribute="centerY" id="ASN-BM-7Xe"/>
                                                         <constraint firstItem="V8W-Cd-QM5" firstAttribute="centerY" secondItem="cUn-Kj-KYo" secondAttribute="centerY" id="U6z-SF-Pzy"/>
+                                                        <constraint firstItem="jbz-wy-Dc1" firstAttribute="leading" secondItem="1im-tt-nIP" secondAttribute="trailing" constant="12" id="Uhl-S0-gjR"/>
                                                         <constraint firstAttribute="trailing" secondItem="gpD-41-I9w" secondAttribute="trailing" constant="8" id="YWG-UN-oLn"/>
                                                         <constraint firstItem="jbz-wy-Dc1" firstAttribute="centerY" secondItem="cUn-Kj-KYo" secondAttribute="centerY" id="YbE-oh-T2K"/>
+                                                        <constraint firstItem="1im-tt-nIP" firstAttribute="leading" secondItem="cUn-Kj-KYo" secondAttribute="leading" constant="20" id="bKh-Fp-70d"/>
                                                         <constraint firstItem="gpD-41-I9w" firstAttribute="leading" secondItem="V8W-Cd-QM5" secondAttribute="trailing" constant="4" id="f1V-fe-PVt"/>
-                                                        <constraint firstItem="jbz-wy-Dc1" firstAttribute="leading" secondItem="cUn-Kj-KYo" secondAttribute="leading" constant="8" id="qmY-nq-A1j"/>
+                                                        <constraint firstItem="1im-tt-nIP" firstAttribute="centerY" secondItem="cUn-Kj-KYo" secondAttribute="centerY" id="vja-b6-iDj"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
