--- a/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
+++ b/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vPN-l2-tpn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13770" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vPN-l2-tpn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13770"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,7 +20,7 @@
             <objects>
                 <viewController id="ahZ-vZ-pxp" customClass="ConverterController" customModule="BitCoinTool" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wDq-aE-dNH">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="a6A-3a-Tin"/>
@@ -29,9 +29,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ujh-o4-RXc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-658" y="330"/>
+            <point key="canvasLocation" x="-682" y="627"/>
         </scene>
-        <!--Currency Controller-->
+        <!--Stats-->
+        <scene sceneID="O7t-ha-gEB">
+            <objects>
+                <viewController id="X2O-8s-81V" customClass="StatViewController" customModule="BitCoinTool" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OSY-44-x3Q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="LPg-4y-OGo"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Stats" id="oP2-cG-JMS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="juB-Hm-4Fw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-682" y="-163"/>
+        </scene>
+        <!--Exchange Rate-->
         <scene sceneID="Adp-1Z-caj">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="ozd-qv-KQk" customClass="CurrencyController" customModule="BitCoinTool" customModuleProvider="target" sceneMemberID="viewController">
@@ -148,14 +164,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ip2-dC-iYs"/>
                     </view>
-                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="9db-2e-3TT"/>
+                    <navigationItem key="navigationItem" title="Exchange Rate" largeTitleDisplayMode="never" id="9db-2e-3TT"/>
                     <connections>
                         <outlet property="tableView" destination="Rmw-KP-oEc" id="wKJ-M2-ESr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bxj-Y6-OJy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-658.39999999999998" y="-545.57721139430294"/>
+            <point key="canvasLocation" x="-682" y="-913"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Geu-uh-wb6">
@@ -168,6 +184,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="QW9-oD-XNB" kind="relationship" relationship="viewControllers" id="WiE-bR-pXb"/>
+                        <segue destination="PDf-Sl-sy0" kind="relationship" relationship="viewControllers" id="gdb-4G-aGA"/>
                         <segue destination="4Jo-JI-e6o" kind="relationship" relationship="viewControllers" id="FNM-K7-Q4A"/>
                     </connections>
                 </tabBarController>
@@ -205,7 +222,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tIw-Tj-pIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1361" y="-544"/>
+            <point key="canvasLocation" x="-1399" y="-913"/>
         </scene>
         <!--Convert-->
         <scene sceneID="IM0-nK-2cg">
@@ -213,8 +230,8 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4Jo-JI-e6o" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Convert" id="kr6-WO-hDI"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="SPQ-eA-MgQ">
-                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="SPQ-eA-MgQ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
                     </navigationBar>
@@ -225,7 +242,27 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gdw-1A-R7s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1362" y="330"/>
+            <point key="canvasLocation" x="-1399" y="628"/>
+        </scene>
+        <!--Stats-->
+        <scene sceneID="EAj-ad-t6b">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PDf-Sl-sy0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Stats" id="TCA-sH-YUk"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="VGx-hE-rNx">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" name="keyboardFocusIndicatorColor" catalog="System" colorSpace="catalog"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="X2O-8s-81V" kind="relationship" relationship="rootViewController" id="noI-qw-Whz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bbI-gk-Mx5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1399" y="-163"/>
         </scene>
     </scenes>
 </document>
