--- a/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
+++ b/BitCoinTool/Storyboards/Base.lproj/Main.storyboard
@@ -38,10 +38,45 @@
                     <view key="view" contentMode="scaleToFill" id="OSY-44-x3Q">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ZKL-xD-ULD">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bkO-3O-957">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="Qgp-v6-mNI" customClass="StatCell" customModule="BitCoinTool" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="X2O-8s-81V" id="5d3-93-t5N"/>
+                                    <outlet property="delegate" destination="X2O-8s-81V" id="BbT-bO-Qgl"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="ZKL-xD-ULD" firstAttribute="trailing" secondItem="LPg-4y-OGo" secondAttribute="trailing" id="1Z2-SG-dzI"/>
+                            <constraint firstItem="ZKL-xD-ULD" firstAttribute="bottom" secondItem="LPg-4y-OGo" secondAttribute="bottom" id="1ma-48-eVI"/>
+                            <constraint firstItem="ZKL-xD-ULD" firstAttribute="top" secondItem="LPg-4y-OGo" secondAttribute="top" id="a6C-p3-k4P"/>
+                            <constraint firstItem="ZKL-xD-ULD" firstAttribute="leading" secondItem="LPg-4y-OGo" secondAttribute="leading" id="ilV-di-66b"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LPg-4y-OGo"/>
                     </view>
                     <navigationItem key="navigationItem" title="Stats" id="oP2-cG-JMS"/>
+                    <connections>
+                        <outlet property="collectionView" destination="ZKL-xD-ULD" id="KXR-8V-otM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="juB-Hm-4Fw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
